itellij fixed